# gpt-from-scratch

./: LICENSE  README.md  pyproject.toml
gpt_from_scratch/: train.py
