[tool.poetry]
name = "gpt-from-scratch"
version = "0.1.0"
description = ""
authors = ["matthew-johnson <mpjohnson1414@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tinygrad = "^0.10.1"
requests = "^2.32.3"
numpy = "^2.2.2"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
